# parallel-totient

./: .gitignore  CMakeLists.txt  connect.sh  data_parse.py  readme.md  run
src/: bench.sh  cli.h  common.h  single_threaded.c
src/mpi/: bench.sh  cli.h  main.c
src/openmp/: bench.sh  cli.h  logging.h  main.c
